--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-apollo-hooks": "^0.5.0",
     "react-autosize-textarea": "^7.1.0",
     "react-dom": "^17.0.1",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
+    "react-kakao-login": "^2.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-toastify": "^6.2.0",
