--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "semicolon_fontend",
+  "name": "semicolon_frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "apollo-boost": "^0.4.9",
+    "global": "^4.4.0",
     "graphql": "^15.4.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-apollo-hooks": "^0.5.0",
     "react-autosize-textarea": "^7.1.0",
@@ -15,10 +17,11 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
     "react-helmet": "^6.1.0",
-    "react-kakao-login": "^2.0.3",
+    "react-icons": "^4.1.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "react-toastify": "^6.2.0",
+    "reactjs-popup": "^2.0.4",
     "rl-react-helmet": "^5.2.0",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
